fixing display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ body {
   .game {
     display: flex;
     flex-direction: column;
-    margin: 50px 20px;
+    margin: 100px 20px;
   }
   .game-info ol {
     display: grid;
